--- a/style.css
+++ b/style.css
@@ -39,7 +39,12 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 0.4rem 0.3rem rgba(0, 0, 0, 0.74), inset 0 0.2rem 0.3rem 0.2rem rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0.4rem 0.3rem rgba(0, 0, 0, 0.74), 
+                inset 0 0.2rem 0.3rem 0.2rem rgba(255, 255, 255, 0.1);
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 
 .game-menu {
@@ -62,25 +67,26 @@ h1 {
 .btn {
     width: 21rem;
     height: 21rem;
+    cursor: pointer;
 }
 
 .green {
-    background-color: green;
+    background-color: rgb(28, 122, 28);
     border-top-left-radius: 100%;
 }
 
 .red {
-    background-color: red;
+    background-color: rgb(160, 20, 20);
     border-top-right-radius: 100%;
 }
 
 .yellow {
-    background-color: yellow;
+    background-color: rgb(173, 173, 18);
     border-bottom-left-radius: 100%;
 }
 
 .blue {
-    background-color: blue;
+    background-color: rgb(32, 32, 138);
     border-bottom-right-radius: 100%;
 }
 
@@ -103,6 +109,13 @@ h1 {
     margin: 0.8rem auto;
     border: 0.3rem solid rgb(29, 27, 27); 
     border-radius: 50%;
+    cursor: pointer;
+    box-shadow: inset 0 0.1rem 0.1rem 0.1rem rgba(255, 255, 255, 0.158),
+                inset 0 -0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.493);
+}
+
+.mb:active {
+    box-shadow: none;
 }
 
 .start-button {
@@ -158,4 +171,19 @@ h1 {
     border-radius: 0.2rem;
     margin: 0.3rem 0.25rem 0 0.25rem;
     background-color:rgb(166, 166, 209);
+    cursor: pointer;
+    transition: transform 0.3s;
+    transition-timing-function: cubic-bezier(0,.8,.17,1.02);
+}
+
+.tick-on {
+    transform: translateX(2rem);
+}
+
+.light-on {
+    background-color: green;
+}
+
+.btn-on {
+    filter: brightness(170%);
 }
