--- a/style.css
+++ b/style.css
@@ -187,3 +187,23 @@ h1 {
 .btn-on {
     filter: brightness(170%);
 }
+
+footer {
+    margin-top: 3rem;
+}
+
+footer > a {
+    text-decoration: none;
+}
+
+@media (max-width: 750px) {
+    html {
+        font-size: 60%;
+    }
+}
+
+@media (max-width: 550px) {
+    html {
+        font-size: 50%;
+    }
+}
